--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -22,11 +22,14 @@ a:hover
   color: #535bf2
 
 body
+  font-family: "Work Sans",Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important
+  line-height: 1.5
+  font-weight: 400
   margin: 0
   display: flex
   min-width: 320px
   min-height: 100vh
-  background-color: var(--neutral-100)
+  background-color: transparent !important
   width: 100%
   user-select: none
 
